--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+ul{
+  list-style-type: none;
+}
+li{
+  list-style-type: none;
+}
